@@ -14,8 +14,10 @@ List rcpp_hello_world() {
   double a = RcppTN::rtn1(0.0, 1.0, 3.5, 3.7) ;
   double b = RcppTN::etn1(0.0, 1.0, 3.5, 3.7) ;
   double c = RcppTN::vtn1(0.0, 1.0, 3.5, 3.7) ;
-  NumericVector y = NumericVector::create( a, b, c ) ;
-  List z = List::create( y ) ;
+  double d = RcppTN::dtn1(3.6, 0.0, 1.0, 3.5, 3.7) ;
+
+  NumericVector y = NumericVector::create(a, b, c, d) ;
+  List z = List::create(y) ;
   return(z) ;
 }
 "
@@ -26,7 +28,8 @@ List rcpp_hello_world() {
     set.seed(1)
     check2 <- c(rtn(0, 1, 3.5, 3.7),
                 etn(0, 1, 3.5, 3.7),
-                vtn(0, 1, 3.5, 3.7)
+                vtn(0, 1, 3.5, 3.7),
+                dtn(3.6, 0, 1, 3.5, 3.7)
                 )
     expect_true(all(check1 == check2))
 }
